# pdfparser

./: .gitignore  compile.sh  pypoppler.py  requirements.txt
BoldClassifier/: ModelFontClassifier.ipynb  TrainingModel.ipynb  dataset_generator.py  model.py  parser.py
DataGenerator/: const.py  generator.py
DataGenerator/text_generator/: ITextGenerator.py  TextGenerator.py
DataGenerator/word_generator/: Font.py  IFont.py  IVisualAugmenter.py  IWordGenerator.py  IWordRenderer.py  VisualAugmenter.py  WordGenerator.py  WordRenderer.py
DataGenerator/word_storage/: README  utils.py
DataGenerator/word_storage/jeopardy/: jeopardy.wl  parser.py
DataGenerator/word_storage/legal_case/: text_extract.py
DataGenerator/word_storage/legal_doc/: 2000.wl  2001.wl  2002.wl  link  parser.py
DataGenerator/word_storage/wiki_qa_corpus/: filter_uniq.py  wiki_qa.wl
pdfparser/cpp/: CMakeLists.txt  pdf2text.cpp
